# AI-Job-Monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
.playwright-mcp/: page-2026-06-21T11-22-25-817Z.yml  page-2026-06-21T11-25-37-630Z.yml  page-2026-06-21T11-26-24-629Z.yml
config/: companies.yaml  company_ratings.yaml  keywords.yaml  profile.yaml  scoring.yaml  settings.yaml
deploy/: com.user.jobmonitor.plist
reports/: latest.html  report_20260622-220233.html  report_20260623-214318.html  report_20260624-212300.html  report_20260625-214209.html  report_20260626-211847.html  report_20260627-210316.html  report_20260628-210114.html  report_20260629-212640.html  report_20260630-212838.html  report_20260701-212807.html  report_20260702-210608.html  report_20260703-210541.html  report_20260704-205706.html  report_20260705-205923.html  report_20260706-212907.html  report_20260707-212417.html  report_20260708-210735.html  report_20260709-212239.html  report_20260710-210545.html  report_20260711-204554.html  report_20260712-204539.html  report_20260713-205646.html  report_20260714-205952.html  report_20260715-205930.html  report_20260716-205721.html  report_20260717-205445.html  report_20260718-204544.html  report_20260719-204602.html  report_20260720-211222.html  report_20260721-210920.html  report_20260722-210631.html  report_20260723-210400.html
scripts/: capture_fixtures.py
src/job_monitor/: __init__.py  cli.py  config.py  db.py  dedup.py  embeddings.py  logging.py  models.py  normalize.py  notify.py  pipeline.py  report.py  scorer.py
tests/: conftest.py
tests/adapters/: test_generic_html.py  test_greenhouse.py  (+8 more)
(+40 files in other folders)
