[project]
name = "ai-job-monitor"
version = "0.1.0"
description = "AI-Job-Monitor — Australian food-industry senior quality job monitoring, matching, and alerting system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0.2",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "selectolax>=0.3.21",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "jinja2>=3.1",
    "tenacity>=8.3",
    "python-dateutil>=2.9",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
job-monitor = "job_monitor.cli:app"
ai-job-monitor = "job_monitor.cli:app"

[project.optional-dependencies]
browser = ["playwright>=1.44"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=6.1",
    "pytest-rerunfailures>=14.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live network tests (deselected by default)",
    "slow: loads the real embedding model",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "PT", "RUF", "SIM", "UP"]
ignore = ["B008", "UP042"]  # B008: typer default-call pattern; UP042: keep explicit (str, Enum) mixin

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
